PyVISA Changelog
================


1.6.1 (unreleased)
------------------

- Nothing changed yet.


1.6 (2014-09-28)
----------------

- 13 Resource Classes covering all resource types.
- Attributes classes provided introspection to VISA attributes.
- Many VISA attributes added to Resource Classes.
- Use of IntEnum for common constants.
- Better documentation.
- Implementation of discoverable backends.
- New functions to encode and decode of IEEE blocks.
- New functions to encode and decode of ASCII blocks.
- New API to transfer values from the instrument.
- Renamed ask/ask_delay/ask_for_values to ask/query_delay/query_values.
  Old names still available for backwards compatibility.
- Implemented Group Execute Trigger for GPIBInterface.
  (Issue #67)
- Make setuptools a requirement.
  (Issue #64 and 68)
- Simplified testing.
- Removed legacy subpackage.
- Removed string handling wrappers.
- Removed Instrument class in favour of Resource.
- Removed status and implemented thread-safe, per instrument, last_status.
- Refactored warning ignoring mechanisms to a thread-safe one.
- Added enum34 requirement for Python < 3.4.
- Removed deprecated term_chars.


1.5 (2014-06-24)
----------------

- Python 3.2+ compatibility.
  (Issue #32)
- Change source encoding to utf-8.
- Reorganized package structure.
  (Issue #13)
- Improved installation.
- Moved tests inside the package.
- Added CI using Travis.
- Created new wrapper for the underlying library.
- Moved vpp43 code to legacy subpackage.
- Moved documentation to readthedocs.
- Make documentation mobile-friendly.
  (Issue #2)
- Removed latex documentation.
- ResourceManager is no longer a singleton.
  (Issue #8)
- VisaLibrary is no longer a singleton.
  (Issue #7)
- VISA functions are VisaLibrary methods.
  (Issue #11)
- Improved detection of VISA library path in all OS.
- Added diagnostics functions to help debugging.
- Added extensive logging to help debugging.
  (Issue #12)
- Improved error messages.